b4.5.5 - Fixes
- Fixed white line from Internet Explorer 9 Pre-Release appearance looking out of place when window is maximised if fake inner borders are hidden;
- Fixed search icon in URLbar looking too close to the stop-reload buttons in Internet Explorer 9 Pre-Release appearance.

--- a/Profile Folder/chrome/partials/chrome/_base.scss
+++ b/Profile Folder/chrome/partials/chrome/_base.scss
@@ -642,7 +642,6 @@ toolbarpaletteitem[id*="wrapper-customizableui-special-spring"] {
         }
 
         @supports -moz-bool-pref("BeautyFox.appearance.IE9PreRelease") {
-            margin-right: -4px !important;
             background: linear-gradient(90deg, rgba(0,0,0,.1) 49%, rgba(0,0,0,.5) 50%);
         }
     }
